server-tools/git-hook/deployment.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: git-hook
  labels:
    app: git-hook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git-hook
  template:
    metadata:
      labels:
        app: git-hook
    spec:
      containers:
      - name: git-hook
        image: lcr.lh/git-hook
        ports:
        - containerPort: 8555
