server-tools/git-hook/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: git-hook
  labels:
    app: git-hook
spec:
  ports:
  - name: git-hook
    port: 8555
  selector:
    app: git-hook
