server-tools/git-hook/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: git-hook
  labels:
    app: git-hook
spec:
  rules:
  - host: git-hook.lh
    http:
      paths:
      - backend:
          serviceName: git-hook
          servicePort: 8555
